Define Model attributes default values

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "codewiser/inarticulate",
-  "description": "Inarticulate is not Eloquent (Redis-Model)",
+  "description": "Inarticulate is not Eloquent (Laravel Redis Model)",
   "type": "library",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "keywords": [
     "redis model"
